--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10",
-        "spatie/filament-markdown-editor": "^1.0"
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "doctrine/dbal": "^3.5",
